micro e metodos
